--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <h1>User</h1>
-<p th:text="'Id: ' + ${user.getId()}">ID</p>
-<p th:text="'Name : ' + ${user.getFirstName()}">NAME</p>
-<p th:text="'Lastname : ' + ${user.getLastName()}">LASTNAME</p>
-<p th:text="'Email : ' + ${user.getEmail()}">EMAIL</p>
+<p th:text="'Id: ' + ${user.getId()}">Id</p>
+<p th:text="'Name : ' + ${user.getFirstName()}">Name</p>
+<p th:text="'Lastname : ' + ${user.getLastName()}">Lastname</p>
+<p th:text="'Email : ' + ${user.getEmail()}">E-mail</p>
 <br>
 <button onclick="window.location.href = '..';">Back</button>
 </body>
